<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="6dp">

        <TextView
            android:text="@string/category_title"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_game_name"
                android:hint="@string/hint_game_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="6dp">

        <TextView
            android:text="@string/category_price"
            style="@style/CategoryStyle" />

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_game_price"
                android:hint="@string/hint_game_price"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"/>

            <TextView
                android:id="@+id/label_weight_units"
                android:text="@string/unit_price"
                style="@style/EditorUnitsStyle"/>

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_stock"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_game_count_minus"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="-"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/edit_game_count"
                android:padding="10dp"
                android:text="0" />

            <Button
                android:id="@+id/button_game_count_plus"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="+"/>

        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/select_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_image" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="200dp" />
</LinearLayout>
